# personal-blog

./: .editorconfig  .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  CNAME  Pipfile  README.md  index.html  mkdocs.yml  mlc_config.json  pyproject.toml  renovate.json  requirements.txt  robots.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bump-deps.yml  deploy.yaml  link-check.yaml  test.yaml
about/: index.html
blog/: index.html
blog-posts/2020-04-22-calculating-return/: index.html
blog-posts/2020-09-21-finance-book-list/: index.html
blog-posts/2020-09-21-iem-reviews/: index.html
blog-posts/2020-09-24-cloudflare-and-github-pages/: index.html
blog-posts/2020-11-28-making-stevia-powder/: index.html
blog-posts/2020-11-30-getting-started-with-investing/: index.html
blog-posts/2020-12-02-asset-allocation/: index.html
daily-routine/: index.html
dead-mans-switch/: index.html
docs/: about.md  daily-routine.md  dead-mans-switch.md  index.md  mountaineering.md  my-diet.md  my-lifestyle.md  photography.md  piano.md  principles.md  resume.md  robots.txt  travel-bucket-list.md
image_resizer/: image_resizer.py
mountaineering/: index.html
my-diet/: index.html
my-lifestyle/: index.html
overrides/: main.html
photography/: index.html
piano/: index.html
principles/: index.html
resume/: index.html
search/: search_index.json
src/: mkdocs.yml
src/docs/: about.md  (+4 more)
stylesheets/: code.css  font.css
tags/: index.html
travel-bucket-list/: index.html
trips/: index.html
webp_converter/: webp.py
(+323 files in other folders)
